--- a/addEntry.html
+++ b/addEntry.html
@@ -1,25 +1,18 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Blog Engine</title>
-	</head>
-	
-	<body>
-		<form method="POST" action="addEntry.php">
-			<table>
-				<tr>
-					<td><strong>Title:</strong></td>
-					<td><input type="text" name="entryTitle" size="20"></td>
-				</tr>
-				<tr valign="top">
-					<td><strong>Text:</strong></td>
-					<td><textarea name="entryText" rows="10" cols="28"></textarea></td>
-				</tr
-				<tr>
-					<td><input type="submit" value="Submit" /></td>
-					<td><input type="reset" value="Reset" /></td>
-				</tr
-			</table>	
-		</form>
-	</body>
-</html>
+<body>
+	<form method="POST" action="addEntry.php">
+		<table>
+			<tr>
+				<td><strong>Title:</strong></td>
+				<td><input type="text" name="entryTitle" size="100"></td> <!-- TODO: consider using CSS for sizing -->
+			</tr>
+			<tr valign="top">
+				<td><strong>Text:</strong></td>
+				<td><textarea name="entryText" rows="25" cols="100"></textarea></td> <!-- TODO: consider using CSS for sizing -->
+			</tr
+			<tr>
+				<td><input type="submit" value="Submit" /></td>
+				<td><input type="reset" value="Reset" /></td>
+			</tr
+		</table>	
+	</form>
+</body>
