--- a/addEntry.html
+++ b/addEntry.html
@@ -10,8 +10,8 @@
 				<td><textarea name="entryText" rows="25" cols="100"></textarea></td> <!-- TODO: consider using CSS for sizing -->
 			</tr
 			<tr>
-				<td><input type="submit" value="Submit" /></td>
-				<td><input type="reset" value="Reset" /></td>
+				<td><input class="submit-btn" type="submit" value="Submit" /></td>
+				<td><input class="reset-btn" type="reset" value="Reset" /></td>
 			</tr
 		</table>	
 	</form>
