abstracted out db code modular

--- a/addEntry.html
+++ b/addEntry.html
@@ -1,4 +1,4 @@
-<body>
+<div id="new_post_container">
 	<form method="POST" action="addEntry.php">
 		<table>
 			<tr>
@@ -15,4 +15,4 @@
 			</tr
 		</table>	
 	</form>
-</body>
+</div>
