minor css improvements in addEntry form

--- a/addEntry.html
+++ b/addEntry.html
@@ -3,16 +3,19 @@
 		<table>
 			<tr>
 				<td><strong>Title:</strong></td>
-				<td><input type="text" name="entryTitle" size="100"></td> <!-- TODO: consider using CSS for sizing -->
+				<td><input class="title" type="text" name="entryTitle"></td>
 			</tr>
 			<tr valign="top">
 				<td><strong>Text:</strong></td>
-				<td><textarea name="entryText" rows="25" cols="100"></textarea></td> <!-- TODO: consider using CSS for sizing -->
-			</tr
+				<td><textarea class="blogpost" name="entryText"></textarea></td> 
+            </tr>
 			<tr>
-				<td><input class="submit-btn" type="submit" value="Submit" /></td>
-				<td><input class="reset-btn" type="reset" value="Reset" /></td>
-			</tr
+                <td></td>
+				<td>
+                    <input class="submit-btn" type="submit" value="Submit" />
+				    <input class="reset-btn" type="reset" value="Reset" />
+                </td>
+            </tr>
 		</table>	
 	</form>
 </div>
