some css fixes and tidyups plus formatted add new blog post page

--- a/addEntry.html
+++ b/addEntry.html
@@ -1,3 +1,6 @@
+<div id="new_post_header">
+    <h1>Add New Blog Post</h1>
+</div>
 <div id="new_post_container">
 	<form method="POST" action="addEntry.php">
 		<table>
@@ -12,7 +15,7 @@
 			<tr>
                 <td></td>
 				<td>
-                    <input class="submit-btn" type="submit" value="Submit" />
+                    <input class="submit-btn" type="submit" value="Blog It" />
 				    <input class="reset-btn" type="reset" value="Reset" />
                 </td>
             </tr>
